<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="69dp"
        android:layout_height="81dp"
        android:contentDescription="@string/description_id_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/identity_card" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="243dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        app:backgroundTint="@color/gray_button"
        android:id="@+id/button_start_capturing"
        android:layout_width="283dp"
        android:layout_height="92dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_capture_id_card"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/action_start_capture"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        app:backgroundTint="@color/gray_button"
        android:id="@+id/button_view_results"
        android:layout_width="283dp"
        android:layout_height="92dp"
        android:layout_marginTop="15dp"
        android:text="@string/action_view_results"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_action_view_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start_capturing"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        app:backgroundTint="@color/gray_button"
        android:id="@+id/button_export_results"
        android:layout_width="283dp"
        android:layout_height="92dp"
        android:layout_marginTop="15dp"
        android:text="@string/action_export_results"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_action_export_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_view_results"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        app:backgroundTint="@color/gray_button"
        android:id="@+id/button_about"
        android:layout_width="283dp"
        android:layout_height="92dp"
        android:layout_marginTop="15dp"
        android:text="@string/action_show_info"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_action_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_export_results"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>