<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_margin="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_id_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="22sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_id_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_id_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/textview_id_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:text="@string/text_birthday"/>

        <TextView
            android:id="@+id/textview_id_birth_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text_year"/>

        <TextView
            android:id="@+id/textview_id_birth_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text_month"/>

        <TextView
            android:id="@+id/textview_id_birth_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text_day"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textview_id_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

</androidx.appcompat.widget.LinearLayoutCompat>
